
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_3__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {int* unsigned_integer; } ;
struct TYPE_6__ {TYPE_1__ target; } ;
struct TYPE_7__ {TYPE_2__ value; } ;
typedef TYPE_3__ rarch_setting_t ;
 int strlcpy (char*,char*,size_t) ;

__attribute__((used)) static void setting_get_string_representation_video_record_quality(rarch_setting_t *setting,
      char *s, size_t len)
{
   if (!setting)
      return;


   switch (*setting->value.target.unsigned_integer)
   {
      case 135:
         strlcpy(s, "Custom", len);
         break;
      case 131:
         strlcpy(s, "Low", len);
         break;
      case 130:
         strlcpy(s, "Medium", len);
         break;
      case 133:
         strlcpy(s, "High", len);
         break;
      case 132:
         strlcpy(s, "Lossless", len);
         break;
      case 129:
         strlcpy(s, "WebM Fast", len);
         break;
      case 128:
         strlcpy(s, "WebM High Quality", len);
         break;
      case 134:
         strlcpy(s, "GIF", len);
         break;
      case 136:
         strlcpy(s, "APNG", len);
         break;
   }
}
